Fixed poster layout problems on the home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 
 body {
 	background: #444444;
+	padding-top: 70px;
 }
